deploy/k8s/api-golang/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-golang-deployment
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-golang
  template:
    metadata:
      labels:
        app: api-golang
    spec:
      containers:
        - name: api-golang
          image: hkdarealest/devops-directive-docker-course-api-golang:0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "200Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 8000
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
